--- a/.dotfiles.md
+++ b/.dotfiles.md
@@ -12,7 +12,7 @@ The directory containing the bare repository will contain all the git stuff like
 It has no working directory. It won't contain any actual source files, it will only ever contain the git config stuff.
 
 
-## Installation
+## Setup
 Create the bare repository in your home directory
 ```Shell
 cd ~
@@ -21,7 +21,7 @@ git init --bare dotfiles
 
 Create a useful bash alias:
 ```Shell
-echo "alias config='/usr/bin/git --git-dir=$HOME/dotfiles --work-tree=$HOME'" >> $HOME/.bashrc
+echo "alias config='/usr/bin/git --git-dir=$HOME/.dotfiles --work-tree=$HOME'" >> $HOME/.bashrc
 ```
 Every time you type `config` in (bash) shell it will run git with the repository being `$HOME/dotfiles` and the working tree being `$HOME`
 
@@ -37,6 +37,13 @@ config add .bashrc
 config add .gitconfig
 ...cd
 ```
+
+Installation
+```Shell
+git clone --bare https://github.com/camjm/.dotfiles.git ~/.dotfiles
+config checkout
+```
+
 
 ### Homebrew
 ```Shell
